--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         }
 
         .hero {
+            background: url('images/bkgd.jpg') no-repeat center center/cover;
             height: 400px;
             display: flex;
             justify-content: center;
